reorganize classes